src/test/ui/const-generics/generic_const_exprs/const_kind_expr/wf_obligation.stderr
error: unconstrained generic constant
  --> $DIR/wf_obligation.rs:17:22
   |
LL |     foo::<_, L>([(); L + 1 + L]);
   |                      ^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); L + 1 + L]:`

error: aborting due to previous error

